--- a/offensiveph/offensiveph/offensiveph.vcxproj
+++ b/offensiveph/offensiveph/offensiveph.vcxproj
@@ -169,7 +169,7 @@
     <ResourceCompile Include="offensiveph.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\kprocesshacker2_x64.sys" />
+    <None Include="kprocesshacker2_x64.sys" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
